fix align event card list

--- a/frontend/src/components/Events/EventsList.module.scss
+++ b/frontend/src/components/Events/EventsList.module.scss
@@ -1,6 +1,7 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, 345px);
+  justify-content: center;
   gap: 40px;
 
   max-width: 1115px;
